spacing fixes

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -34,4 +34,5 @@
 
 .list-item{
     font-size: 20px;
+    margin-bottom: 20px;
 }
